--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
   <section id="contact" class="py-16 px-4 max-w-4xl mx-auto">
     <h3 class="text-2xl font-bold mb-4">聯絡方式｜Contact</h3>
     <div class="text-gray-700 space-y-2">
-      <p>Email：<a href="mailto:yclin.todd@gmail.com" class="text-green-700 underline">yclin.todd@knowenv.com / yclin.todd@gmail.com</a></p>
+      <p>Email(1): <a href="mailto:yclin.todd@gmail.com" class="text-green-700 underline">yclin.todd@knowenv.com</a></p>
+      <p>Email(2): <a href="mailto:yclin.todd@gmail.com" class="text-green-700 underline">yclin.todd@gmail.com</a></p>
       <p>電話 Phone：<a href="tel:+886963083767" class="text-green-700 underline">0963-083-767</a></p>
       <p>地址 Address：臺中市西屯區台灣大道四段847號16樓<br>
          16F., No.847, Sec. 4, Taiwan Blvd., Xitun Dist., Taichung City, Taiwan</p>
